--- a/package.json
+++ b/package.json
@@ -9,19 +9,40 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "^51.0.0",
-    "expo-constants": "~16.0.1",
-    "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.9",
-    "expo-splash-screen": "~0.27.4",
-    "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.6"
+    "@gorhom/bottom-sheet": "^5.0.6",
+    "@react-google-maps/api": "^2.20.3",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/cli": "latest",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
+    "@react-navigation/stack": "^7.1.0",
+    "@rneui/base": "github:react-native-elements/react-native-elements#base",
+    "expo": "~52.0.20",
+    "expo-constants": "~17.0.3",
+    "expo-linking": "~7.0.3",
+    "expo-router": "~4.0.14",
+    "expo-splash-screen": "^0.29.18",
+    "expo-status-bar": "~2.0.0",
+    "firebase": "^11.1.0",
+    "geofirestore": "^5.2.0",
+    "metro": "^0.81.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-native": "^0.76.5",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-element-dropdown": "^2.12.2",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-google-places-autocomplete": "^2.5.7",
+    "react-native-maps": "^1.18.0",
+    "react-native-maps-directions": "^1.9.0",
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "~4.1.0",
+    "react-native-status-bar-height": "^2.6.0",
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-web": "~0.19.6",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
